# Copyright (c) 2016, NVIDIA CORPORATION.  All rights reserved.

#-------------------------------------------------------------------------------
# Samples
#-------------------------------------------------------------------------------

if (VIBRANTE_V5L)
    add_subdirectory(lib_camera_gmsl_raw)
endif()

